ajout de dimitri et romain dans le gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,10 @@
 *.project
 Maxime*
 maxime*
+Dimitri*
+dimitri*
+Romain*
+romain*
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
