--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,8 @@ dimitri*
 Romain*
 romain*
 WebContent/META-INF/context.xml
+*.xml
+*context*
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
