--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@
 
 # reglage ENI #
 */.settings
+*/build
 *.classpath
 *.project
 Maxime*
@@ -35,4 +36,4 @@ WebContent/META-INF/context.xml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/build/
+
