--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,11 +2,21 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>ENIEncheres</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
+    <welcome-file>Accueil.jsp</welcome-file>
   </welcome-file-list>
+  
+  <error-page>
+  		<error-code>404</error-code>
+  		<location>/AppExceptionHandler</location>
+  </error-page>
+  
+  <error-page>
+  		<exception-type>javax.servlet.ServletException</exception-type>
+  		<location>/AppExceptionHandler</location>
+  </error-page>
+  
+  <error-page>
+  		<exception-type>java.lang.Throwable</exception-type>
+  		<location>/AppExceptionHandler</location>
+  </error-page>
 </web-app>
